// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code renders snapshot of inverted size large 1`] = `
.emotion-0 {
  font-family: JetBrainsMonoNL,Menlo,Monaco,'Courier New',monospace;
  font-weight: 400;
  line-height: 1.5;
  border-radius: 4px;
  margin: 0 2px;
  padding: 2px 4px;
  white-space: nowrap;
  font-size: 14px;
  color: #FFFFFF;
  background-color: rgba(255, 255, 255, 0.4);
}

<code
  class="emotion-0"
>
  test
</code>
`;

exports[`Code renders snapshot of inverted size medium 1`] = `
.emotion-0 {
  font-family: JetBrainsMonoNL,Menlo,Monaco,'Courier New',monospace;
  font-weight: 400;
  line-height: 1.5;
  border-radius: 4px;
  margin: 0 2px;
  padding: 2px 4px;
  white-space: nowrap;
  font-size: 12px;
  color: #FFFFFF;
  background-color: rgba(255, 255, 255, 0.4);
}

<code
  class="emotion-0"
>
  test
</code>
`;

exports[`Code renders snapshot of size large 1`] = `
.emotion-0 {
  font-family: JetBrainsMonoNL,Menlo,Monaco,'Courier New',monospace;
  font-weight: 400;
  line-height: 1.5;
  border-radius: 4px;
  margin: 0 2px;
  padding: 2px 4px;
  white-space: nowrap;
  font-size: 14px;
  color: #05192D;
  background-color: #EFEBE4;
}

<code
  class="emotion-0"
>
  test
</code>
`;

exports[`Code renders snapshot of size medium 1`] = `
.emotion-0 {
  font-family: JetBrainsMonoNL,Menlo,Monaco,'Courier New',monospace;
  font-weight: 400;
  line-height: 1.5;
  border-radius: 4px;
  margin: 0 2px;
  padding: 2px 4px;
  white-space: nowrap;
  font-size: 12px;
  color: #05192D;
  background-color: #EFEBE4;
}

<code
  class="emotion-0"
>
  test
</code>
`;
